--- a/beginner_projects/CMakeLists.txt
+++ b/beginner_projects/CMakeLists.txt
@@ -15,3 +15,5 @@ add_executable(movetox src/move_to_X.cpp)
 target_link_libraries(movetox ${catkin_LIBRARIES})
 add_executable(gotoxy src/move_to_XY.cpp)
 target_link_libraries(gotoxy ${catkin_LIBRARIES})
+add_executable(square src/move_square.cpp)
+target_link_libraries(square ${catkin_LIBRARIES})
