--- a/beginner_projects/CMakeLists.txt
+++ b/beginner_projects/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(gotoxy src/move_to_XY.cpp)
 target_link_libraries(gotoxy ${catkin_LIBRARIES})
 add_executable(square src/move_square.cpp)
 target_link_libraries(square ${catkin_LIBRARIES})
+add_executable(circle src/move_circle.cpp)
+target_link_libraries(circle ${catkin_LIBRARIES})
